# specialists

./: README.md
backend/: config.py  docker-compose.yml  pyproject.toml
backend/database/: get_db.py  init_db.py
backend/database/migrations/: ddl.sql
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/routes/: complaints.py  customers.py  orders.py  questions.py  reviews.py  specialists.py  specialties.py
backend/src/domain/: users.py
backend/src/repository/: complaint.py  customer.py  order.py  question.py  review.py  specialist.py  speciality.py  user.py
backend/src/schemas/: complaint.py  customer.py  login.py  order.py  question.py  review.py  specialist.py  speciality.py  user.py
backend/src/services/: auth.py  jwt_service.py
frontend/: bun.lockb  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  AppContext.jsx  main.jsx
frontend/src/api/: complaints.js  customers.js  orders.js  questions.js  reviews.js  specialists.js  specialities.js
frontend/src/components/: AdminProfile.jsx  Auth.jsx  ComplaintsTab.jsx  CreateOrderForm.jsx  CustomerProfile.jsx  Header.jsx  LoginForm.jsx  Main.jsx  OrdersTab.jsx  QuestionForm.jsx  QuestionsList.jsx  RegisterForm.jsx  SpecialistPreview.jsx  SpecialistProfile.jsx  SpecialistReviews.jsx  SpecialistSpecialities.jsx  Specialists.jsx  SpecialitiesList.jsx  SpecialityCard.jsx
frontend/src/utils/: lib.js  toast.js
